# snappass

./: CONTRIBUTING.rst  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  tests.py  tox.ini
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  codeql-analysis.yml  release.yml  trivy.yml
snappass/: main.py
snappass/static/snappass/css/: custom.css
snappass/static/snappass/scripts/: app.js  crypto.js
snappass/templates/: base.html  expired.html  preview.html  set_password.html
